--- a/install
+++ b/install
@@ -41,7 +41,7 @@ getApache()
     else
        echo "$CURL command is not installed."
        echo "Running sudo apt-get install curl"
-              sudo apt-get install curl
+              sudo apt-get install apache2
        TEMPVAR = "1";
     fi
 
@@ -54,7 +54,7 @@ getPHP()
     else
        echo "$CURL command is not installed."
        echo "Running sudo apt-get install curl"
-       sudo apt-get install curl
+       sudo apt-get install php5
        TEMPVAR = "1";
     fi
 
@@ -63,7 +63,6 @@ getPHP()
 
 getDependencies()
 {
-sudo apt-get -y install apache2
 sudo apt-get -y install libapache2-mod-php5 libapache2-mod-perl2 php5 php5-cli php5-cgi
 sudo apt-get -y install php5-common php5-curl php5-dev php5-gd
 sudo apt-get -y install php5-imap php5-ldap php5-mhash php5-mysql php5-odbc
