--- a/install
+++ b/install
@@ -124,10 +124,10 @@ getDashboard()
 {
   cd /var/www/funstore
   sudo wget funstore.io/setup/$BOARD/dashboard.tar.gz
-  sudo tar -xcvf dashboard.tar.gz
+  sudo tar -zxvf dashboard.tar.gz
   cd /var/www
   sudo rm index.html
-  sudo cp /var/www/funstore/dashboard/index-main.html index.html
+  sudo cp /var/www/funstore/dashboard/index-main.php index.php
   sudo sed -i 's/raspberrypi/funstore/' /etc/hostname
   sudo sed -i 's/raspberrypi/funstore/' /etc/hosts
   sudo /etc/init.d/avahi-daemon restart
